# cube20

./: .gitignore  CMakeLists.txt  README.md  cubepos.cpp  cubepos.h  cubepos_test.cpp  hcoset.cpp  kocsymm.cpp  kocsymm.h  kocsymm_test.cpp  phase1prune.cpp  phase1prune.h  phase1prune_test.cpp  phase2prune.cpp  phase2prune.h  phase2prune_test.cpp  twophase.cpp
